<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/username_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_user"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimary" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/username_reg"
        android:layout_alignLeft="@+id/username_reg"
        android:layout_alignRight="@+id/username_reg"
        android:layout_alignStart="@+id/username_reg"
        android:layout_below="@+id/username_reg"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimary" />

    <EditText
        android:id="@+id/pass_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email_reg"
        android:layout_alignLeft="@+id/email_reg"
        android:layout_alignRight="@+id/email_reg"
        android:layout_alignStart="@+id/email_reg"

        android:layout_below="@+id/email_reg"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimary" />

    <Button
        android:id="@+id/Register_reg"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:contentDescription="@string/register_save_desc"
        android:text="@string/register"
        android:onClick="reg" />
</RelativeLayout>